Signup and LOGIN
Signup and login using database

--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -367,9 +367,11 @@
                 <th>Name</th>
                 <th>Email</th>
                 <th>Password</th>
+                <th>Phone Number</th>
+                <th>Date Of Birth</th>
+                <th>Gender</th>
                 <th>Accept Users</th>
                 <th>Reject Users</th>
-                <th>Ban</th>
               </tr>
             </thead>
             <tbody>
@@ -377,37 +379,12 @@
                 <td>01</td>
                 <td>Sam David</td>
                 <td>Example@gmail.com</td>
-                <td>123456</td>
+                <td>12345678910</td>
+                <td>01125897456</td>
+                <td>12/10/1999</td>
+                <td>Male</td>
                 <td><button id="accept_but">Accept</button></td>
                 <td><button id="ban">Reject</button></td>
-                <td><button id="ban" onclick="toggleBan1()">Ban</button></td>
-              </tr>
-              <tr class="active">
-                <td>02</td>
-                <td>Balbina Kherr</td>
-                <td>Example@gmail.com</td>
-                <td>123456</td>
-                <td><button id="accept_but">Accept</button></td>
-                <td><button id="ban">Reject</button></td>
-                <td><button id="ban" onclick="toggleBan2()">Ban</button></td>
-              </tr>
-              <tr>
-                <td>03</td>
-                <td>Badan John</td>
-                <td>Example@gmail.com</td>
-                <td>123456</td>
-                <td><button id="accept_but">Accept</button></td>
-                <td><button id="ban">Reject</button></td>
-                <td><button id="ban" onclick="toggleBan3()">Ban</button></td>
-              </tr>
-              <tr>
-                <td>04</td>
-                <td>Sara David</td>
-                <td>Example@gmail.com</td>
-                <td>123456</td>
-                <td><button id="accept_but">Accept</button></td>
-                <td><button id="ban">Reject</button></td>
-                <td><button id="ban" onclick="toggleBan4()">Ban</button></td>
               </tr>
             </tbody>
           </table>
