--- a/views/index.ejs
+++ b/views/index.ejs
@@ -103,182 +103,72 @@
             <div>
                 <h1>Create Account</h1>
             </div>
-            <form>
-
+            <form id="signup-form" action="/signup" method="post">
                 <div class="Main_holder">
                     <div class="holder_left">
                         <div class="holder">
                             <h3>Full Name: </h3>
-                            <input class="field_text" type="text" id="full_name" placeholder="&nbsp &nbsp &nbsp FIRST SECOND NAME">
+                            <input class="field_text" type="text" id="full_name" name="Fullname" placeholder="&nbsp &nbsp &nbsp FIRST SECOND NAME">
                         </div>
-
-
                         <div class="holder">
                             <h3>Email: &nbsp &nbsp &nbsp &nbsp </h3>
-                            <input class="field_text" type="Email" id="email" placeholder="&nbsp &nbsp &nbsp example@example.com">
+                            <input class="field_text" type="Email" id="email" name="email" placeholder="&nbsp &nbsp &nbsp example@example.com">
                         </div>
-
-
                         <div class="holder">
                             <h3>Password: &nbsp</h3>
-                            <input class="field_text" type="password" id="pass" placeholder="&nbsp &nbsp &nbsp************">
+                            <input class="field_text" type="password" id="pass" name="Password" placeholder="&nbsp &nbsp &nbsp************">
                         </div>
                     </div>
-
                     <div class="holder_right">
-
-
                         <div class="holder">
                             <h3>Phone Number:</h1>
-                                <input class="field_text" type="number" id="phone_num" placeholder="&nbsp&nbsp&nbsp +020123456789">
+                                <input class="field_text" type="number" id="phone_num" name="PhoneNumber" placeholder="&nbsp&nbsp&nbsp +020123456789">
                         </div>
-
-
                         <div class="holder">
                             <h3>Date of Birth: </h3>
-
-                            <select id="Day" class="fieldset">
-                                <option value="0">Day</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                                <option value="13">13</option>
-                                <option value="14">14</option>
-                                <option value="15">15</option>
-                                <option value="16">16</option>
-                                <option value="17">17</option>
-                                <option value="18">18</option>
-                                <option value="19">19</option>
-                                <option value="20">20</option>
-                                <option value="21">21</option>
-                                <option value="22">22</option>
-                                <option value="23">23</option>
-                                <option value="24">24</option>
-                                <option value="25">25</options>
-                                <option value="26">26</option>
-                                <option value="27">27</option>
-                                <option value="28">28</option>
-                                <option value="29">29</option>
-                                <option value="30">30</option>
-                                <option value="31">31</option>
+                            <select id="day" name="day" required>
+                                <option value="">Day</option>
+                                <script>
+                                    for (let i = 1; i <= 31; i++) {
+                                        document.write('<option value="' + i + '">' + i + '</option>');
+                                    }
+                                </script>
                             </select>
-
-                            <select class="fieldset" id="month">
-                                <option value="0">Month</option>
-                                <option value="1">January</option>
-                                <option value="2">February</option>
-                                <option value="3">March</option>
-                                <option value="4">April</option>
-                                <option value="5">May</option>
-                                <option value="6">June</option>
-                                <option value="7">July</option>
-                                <option value="8">August</option>
-                                <option value="9">September</option>
-                                <option value="10">October</option>
-                                <option value="11">November</option>
-                                <option value="12">December</option>
+                            <select id="month" name="month" required>
+                                <option value="">Month</option>
+                                <script>
+                                    const months = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
+                                    for (let i = 1; i <= 12; i++) {
+                                        document.write('<option value="' + i + '">' + months[i - 1] + '</option>');
+                                    }
+                                </script>
                             </select>
-
-                            <select class="fieldset" id="year">
-                                <option value="0">Year</option>
-                                <option value="1950">1950</option>
-                                <option value="1951">1951</option>
-                                <option value="1952">1952</option>
-                                <option value="1953">1953</option>
-                                <option value="1954">1954</option>
-                                <option value="1955">1955</option>
-                                <option value="1956">1956</option>
-                                <option value="1957">1957</option>
-                                <option value="1958">1958</option>
-                                <option value="1959">1959</option>
-                                <option value="1960">1960</option>
-                                <option value="1961">1961</option>
-                                <option value="1962">1962</option>
-                                <option value="1963">1963</option>
-                                <option value="1964">1964</option>
-                                <option value="1965">1965</option>
-                                <option value="1966">1966</option>
-                                <option value="1967">1967</option>
-                                <option value="1968">1968</option>
-                                <option value="1969">1969</option>
-                                <option value="1970">1970</option>
-                                <option value="1971">1971</option>
-                                <option value="1972">1972</option>
-                                <option value="1973">1973</option>
-                                <option value="1974">1974</option>
-                                <option value="1975">1975</option>
-                                <option value="1976">1976</option>
-                                <option value="1977">1977</option>
-                                <option value="1978">1978</option>
-                                <option value="1979">1979</option>
-                                <option value="1980">1980</option>
-                                <option value="1981">1981</option>
-                                <option value="1982">1982</option>
-                                <option value="1983">1983</option>
-                                <option value="1984">1984</option>
-                                <option value="1985">1985</option>
-                                <option value="1986">1986</option>
-                                <option value="1987">1987</option>
-                                <option value="1987">1988</option>
-                                <option value="1987">1989</option>
-                                <option value="1987">1990</option>
-                                <option value="1987">1991</option>
-                                <option value="1987">1992</option>
-                                <option value="1987">1993</option>
-                                <option value="1987">1994</option>
-                                <option value="1987">1995</option>
-                                <option value="1987">1996</option>
-                                <option value="1987">1997</option>
-                                <option value="1987">1998</option>
-                                <option value="1987">1999</option>
-                                <option value="1987">2000</option>
-                                <option value="1987">2001</option>
-                                <option value="1987">2002</option>
-                                <option value="1987">2003</option>
-                                <option value="1987">2004</option>
-                                <option value="1987">2005</option>
-                                <option value="1987">2006</option>
-                                <option value="1987">2007</option>
-                                <option value="1987">2008</option>
-                                <option value="1987">2009</option>
-                                <option value="1987">2010</option>
-                                <option value="1987">2011</option>
-                                <option value="1987">2012</option>
-                                <option value="1987">2013</option>
-                                <option value="1987">2014</option>
-                                <option value="1987">2015</option>
-                                <option value="1987">2016</option>
-                                <option value="1987">2017</option>
-                                <option value="1987">2018</option>
-                                <option value="1987">2019</option>
-                            </select>
+                            <select id="year" name="year" required>
+                                <option value="">Year</option>
+                                <script>
+                                    const currentYear = new Date().getFullYear();
+                                    for (let i = 1900; i <= currentYear; i++) {
+                                        document.write('<option value="' + i + '">' + i + '</option>');
+                                    }
+                                </script>
+                            </select><br><br>
                         </div>
                         <div class="holder">
                             <h3>Gender: </h1>
-                                <input type="radio" name="gender" value="male">
+                                <input type="radio" name="Gender" value="male" required>
                                 <h3> Male </h3>
-                                <input type="radio" name="gender" value="female">
+                                <input type="radio" name="Gender" value="female" required>
                                 <h3> Female </h3>
                         </div>
                     </div>
                 </div>
+                <div class="holder_words">
+                    <h3>By clicking on create account you Agree on our terms and conditions</h1>
+                        <h3>You will receive an email to verify your account</h1>
+                </div>
+                <button type="submit">Create Account</button>
             </form>
-
-
-            <div class="holder_words">
-                <h3>By clicking on create account you Agree on our terms and conditions</h1>
-                    <h3>You will receive an email to verify your account</h1>
-            </div>
-            <button onclick="button_validate()">Create Account</button>
+            
             </div>
     </section>
 
