--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -58,10 +58,10 @@
         <br>
 
         <div class="radiobuttons">
-          <input class="radio" type="radio" id="html" name="Gender" value="male">
-          <label class="label" for="html">Male</label>
-          <input class="radio" type="radio" id="css" name="Gender" value="female">
-          <label class="label" for="css">Female</label>
+          <input class="radio1" type="radio" id="html" name="Gender" value="male">
+          <label class="label1" for="html">Male</label>
+          <input class="radio2" type="radio" id="css" name="Gender" value="female">
+          <label class="label2" for="css">Female</label>
         </div>
         <div class="botton22 ">
           <br>
