--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -298,7 +298,7 @@
                       <td><%= new Date(user.DateOfBirth).toLocaleDateString() %></td>
                       <td><%= user.Gender%></td> 
                       <td><button onclick="toggleForm2()">View</button></td>
-                      <td><button id="ban" onclick="toggleBan2()">Ban</button></td>
+                      <td><button class="delete" data-user-id="<%= user.id %>">Delete</button></td>
                     </tr>
                   <% }); %>
               </tr>
